--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,42 @@
 .shrimp/WebGUI.md
 node_modules/
 dapp/.next/
+.taskmaster
+.vscode
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dev-debug.log
+# Dependency directories
+# Environment variables
+.env
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+# OS specific
+Thumbs.db
+
+# Rust
+target/
+**/*.rs.bk
+*.pdb
+Cargo.lock
+
+# CKB build artifacts
+contracts/build/
+*.so
+*.dylib
+
+# Task files
+# tasks.json
+# tasks/ 
+.claude
+.cursor/rules/taskmaster/dev_workflow.mdc
