--- a/package.json
+++ b/package.json
@@ -4,12 +4,8 @@
   "description": "CKB DAO Portal v2 - Decentralized Governance Platform",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"npm run dev:contracts\" \"npm run dev:dapp\"",
-    "dev:contracts": "cd contracts && cargo watch -x build",
-    "dev:dapp": "cd dapp && npm run dev",
+    "dev": "netlify dev",
     "build": "npm run build:contracts && npm run build:dapp",
-    "build:contracts": "cd contracts && cargo build --release",
-    "build:dapp": "cd dapp && npm run build",
     "test": "npm run test:contracts && npm run test:dapp",
     "test:contracts": "cd contracts && cargo test",
     "test:dapp": "cd dapp && npm test",
@@ -23,5 +19,9 @@
     "type": "git",
     "url": "https://github.com/ckb-dao-portal-v2"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@netlify/functions": "^4.2.2",
+    "@simplewebauthn/server": "^13.1.2"
+  }
 }
