--- a/dapp/netlify.toml
+++ b/dapp/netlify.toml
@@ -1,8 +1,36 @@
+[functions]
+# Functions at root level, not in dapp
+directory = "netlify/functions"
+
 [dev]
-  # Development server configuration
-  command = "next dev --port 4000"
-  targetPort = 4000
-  port = 8888
-  publish = "dapp"
-  functionsPort = 9999
-  autoLaunch = false
+# Development server configuration
+command = "next dev --port 4100"
+targetPort = 4100
+port = 9000
+publish = "dapp"
+functionsPort = 10000
+autoLaunch = false
+
+[[plugins]]
+# Essential plugin for deploying Next.js sites on Netlify.
+# It automatically configures redirects, serverless functions, and more.
+package = "@netlify/plugin-nextjs"
+
+
+# API redirects for cleaner URLs
+[[redirects]]
+from = "/api/binding/registration-verification"
+to = "/.netlify/functions/binding-registration-verification"
+status = 200
+
+[[redirects]]
+from = "/api/binding/registration-options"
+to = "/.netlify/functions/binding-registration-options"
+status = 200
+
+# Environment variables (set in Netlify dashboard)
+# TELEGRAM_BOT_TOKEN=your_bot_token
+# TELEGRAM_BOT_USERNAME=your_bot_username  
+# NEXT_PUBLIC_CKB_RPC_URL=https://testnet.ckb.dev
+# NEXT_PUBLIC_CKB_INDEXER_URL=https://testnet.ckb.dev/indexer
+# NEXT_PUBLIC_SSRI_EXECUTOR_URL=http://localhost:9090
