--- a/dapp/package.json
+++ b/dapp/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ckb-ccc/connector-react": "^1.0.19",
+    "@ckb-ccc/shell": "^1.1.21",
     "@hookform/resolvers": "^3.9.1",
     "@netlify/functions": "^2.8.2",
     "@radix-ui/react-accordion": "latest",
