--- a/dapp/package.json
+++ b/dapp/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
+    "prebuild": "bash ./pre-build.sh && cd ../packages/ssri-ckbdao && pnpm install && pnpm build",
+    "build": "pnpm run prebuild && next build",
     "dev": "next dev --port 4000",
     "lint": "next lint",
     "start": "next start"
@@ -40,9 +41,10 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@simplewebauthn/browser": "^10.0.0",
-    "@simplewebauthn/server": "^10.0.1",
+    "@simplewebauthn/browser": "^13.2.2",
+    "@simplewebauthn/server": "^13.2.2",
     "autoprefixer": "^10.4.20",
+    "beautify-console-log": "^1.3.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -59,6 +61,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
+    "ssri-ckbdao": "file:../packages/ssri-ckbdao",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
